feat(policy): add policy validation service