@@ -1,28 +1,33 @@
 package io.github.jeniths006.runtimeguard.controller;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import io.github.jeniths006.runtimeguard.exception.PolicyLoadException;
+import io.github.jeniths006.runtimeguard.exception.PolicyValidationException;
 import io.github.jeniths006.runtimeguard.model.ExecutionRequest;
 import io.github.jeniths006.runtimeguard.model.Policy;
 import io.github.jeniths006.runtimeguard.service.PolicyLoader;
+import io.github.jeniths006.runtimeguard.service.PolicyValidator;
 
 public class SandboxController {
+
+    PolicyLoader policyLoader = new PolicyLoader();
+    PolicyValidator policyValidator = new PolicyValidator();
 
     public void execute(ExecutionRequest request) {
         System.out.println("Executing " + request.action() + " on " + request.target());
         System.out.println("Loading policy file: " + request.policyPath());
 
-        PolicyLoader policyLoader = new PolicyLoader();
-
-        Path policyPath = Paths.get(request.policyPath());
+        Path policyPath = Path.of(request.policyPath());
 
         try {
             Policy policy = policyLoader.load(policyPath);
             System.out.println("Policy loaded successfully");
-        } catch (PolicyLoadException e) {
-            e.printStackTrace();
+            policyValidator.validate(policy);
+            System.out.println("Policy validated successfully");
+
+        } catch (PolicyLoadException | PolicyValidationException e) {
+           e.printStackTrace();
         }
 
 
